welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: illegal start of simple expression
	var tab = [1,2,3]
                  ^